hope to resolve issue with small whitespace of right of small window size

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -2,6 +2,7 @@ body {
     background: #15d663;
     font-size: 150%;
     color: white;
+    width: 100%;
 }
 
 .even {
